style(navButtons): added style for nav buttons

--- a/src/components/Layout/Navbar/Account/account.scss
+++ b/src/components/Layout/Navbar/Account/account.scss
@@ -20,3 +20,11 @@
 #account-menu {
   top: 40px;
 }
+.connect-btn {
+  width: 200px;
+  height: 45px;
+  color: #4c2ffc !important;
+  border: 1px solid #4c2ffc !important;
+  background-color: rgba(76, 47, 252, 0.1) !important;
+  box-shadow: 0px 0px 8px rgba(76, 47, 252, 0.18);
+}
