--- a/src/components/Layout/Navbar/NavbarAccountDetails/navbarAccountDetails.scss
+++ b/src/components/Layout/Navbar/NavbarAccountDetails/navbarAccountDetails.scss
@@ -3,6 +3,7 @@
     border: 1px solid #4c2ffc;
     background: rgba(76, 47, 252, 0.1);
     color: #4c2ffc;
+    box-shadow: 0px 0px 8px rgba(76, 47, 252, 0.18);
   }
   .explorer-link {
     color: #6c757d !important;
