--- a/src/components/Layout/Navbar/NavbarAccountDetails/navbarAccountDetails.scss
+++ b/src/components/Layout/Navbar/NavbarAccountDetails/navbarAccountDetails.scss
@@ -15,5 +15,13 @@
     border-radius: 6px;
     margin-top: 10px;
     color: #4c2ffc;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .read-only-wrapper {
+    background: rgba(8, 4, 29, 0.1);
+    border-radius: 6px;
+  }
+  .read-only-wrapper p {
+    color: #7a7883;
   }
 }
