feat(changeCurrency): added dropdown without functionality

--- a/src/assets/sass/_components.scss
+++ b/src/assets/sass/_components.scss
@@ -11,5 +11,6 @@
 
 @import '../../components/Trim/trim';
 @import '../../components/Layout/Navbar/Account/account';
+@import '../../components/Layout/Navbar/menu';
 @import '../../components/IconState/iconState';
 @import '../../components/ReceiveModal/receiveModal';
