--- a/src/components/Layout/Navbar/ConnectedAccount/connectedAccount.scss
+++ b/src/components/Layout/Navbar/ConnectedAccount/connectedAccount.scss
@@ -11,3 +11,9 @@
   top: 15px !important;
   border-radius: 10px !important;
 }
+
+.connect-actions-btns {
+  background: rgba(76, 47, 252, 0.1);
+  border-radius: 10px;
+  color: #4c2ffc;
+}
