--- a/src/assets/sass/components/multisigDetailsPage.scss
+++ b/src/assets/sass/components/multisigDetailsPage.scss
@@ -305,10 +305,11 @@
     gap: 15px;
   }
   .sign {
-    color: #16d296;
-    background: #f3fdfa;
-    border: 1px solid #ddf9f0;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
+    border: 1px solid #4c2ffc;
+    background: rgba(76, 47, 252, 0.1);
+    color: #4c2ffc;
+    box-shadow: 0px 0px 8px rgba(76, 47, 252, 0.18);
+    -webkit-box-shadow: 0px 0px 8px rgba(76, 47, 252, 0.18);
     &:hover,
     &:active {
       background-image: linear-gradient(rgba(22, 210, 150, 0.1) 0 0);
@@ -326,10 +327,11 @@
     }
   }
   .remove {
-    color: #dc3545;
-    background: #f9f2f2;
-    border: 1px solid #ffe2e2;
-    box-sizing: border-box;
+    border: 1px solid #e51a3e !important;
+    color: #e51a3e !important;
+    background: rgba(229, 26, 62, 0.1) !important;
+    margin-top: 0px !important;
+    top: 15px !important;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
     &:hover,
     &:active {
