--- a/src/components/Layout/Navbar/menu.scss
+++ b/src/components/Layout/Navbar/menu.scss
@@ -14,6 +14,13 @@
   border-right: 2px solid #4c2ffc;
   display: block;
   background: #e4eaff;
+  color: #4c2ffc !important;
+}
+.active svg {
+  color: #4c2ffc !important;
+}
+.active span {
+  font-weight: 600;
 }
 .accordion-details-link {
   padding: 0 !important;
