style(mobileLayout): styled mobile layout

--- a/src/components/Layout/Navbar/menu.scss
+++ b/src/components/Layout/Navbar/menu.scss
@@ -88,3 +88,14 @@
 .drawer-wrapper .MuiPaper-elevation {
   z-index: 1 !important;
 }
+
+.mobile-top-side {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.total-balance-wrapper .total-balance-text {
+  font-size: 15px;
+}
+.total-balance-wrapper .ex-currency {
+  font-size: 24px;
+}
