--- a/src/assets/sass/components/navbar.scss
+++ b/src/assets/sass/components/navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
   height: 6.071428571428571rem;
+
   .nav-logo {
     cursor: pointer;
   }
@@ -189,4 +190,5 @@
 .bottom-items {
   bottom: 10px;
   width: 100%;
+  z-index: 9;
 }
