style(switchAccount): switch account dropdown style

--- a/src/components/Layout/Navbar/ConnectedAccount/connectedAccount.scss
+++ b/src/components/Layout/Navbar/ConnectedAccount/connectedAccount.scss
@@ -1,5 +1,5 @@
-.explorer-link {
-  color: #6c757d !important;
+.connect-actions-btns .link-color {
+  color: rgba(76, 47, 252, 0.54) !important;
 }
 
 .disconnect-wallet-btn {
