--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -5,9 +5,16 @@
 @import './variables';
 
 $headings-font-weight: 300 !important;
-$primary: #1b46c2;
+$primary: #4c2ffc;
 $light: #fafafa;
 $a: #1392ff;
+
+// Theme variables
+:root {
+  --text-color: #4c2ffc;
+  --button-background: #4c2ffc1a;
+  --button-shadow: #4c2ffc2e;
+}
 
 /* Do not move the imports from here. 
 Override Bootstrap variables only above.
@@ -17,7 +24,7 @@ Override Bootstrap variables only above.
 @import './../../../node_modules/bootstrap/scss/bootstrap.scss';
 
 // Progress bar
-@import './../../../node_modules/react-circular-progressbar/dist/styles.css';
+// @import './../../../node_modules/react-circular-progressbar/dist/styles.css';
 
 /* Base
 -------------------------------------------------- */
