style(mainButton): added main button style

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -11,7 +11,7 @@ $a: #1392ff;
 
 // Theme variables
 :root {
-  --text-color: #4c2ffc;
+  --primary-color: #4c2ffc;
   --button-background: #4c2ffc1a;
   --button-shadow: #4c2ffc2e;
 }
