style(mobileLayout): styled components on mobile layout

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -18,6 +18,7 @@ $a: #1392ff;
   --link: #4c2ffc8a;
   --danger-color: #e51a3e;
   --danger-background: #e51a3e1a;
+  --secondary-shadow: #4c2ffc08;
 }
 
 /* Do not move the imports from here. 
