--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -12,8 +12,12 @@ $a: #1392ff;
 // Theme variables
 :root {
   --primary-color: #4c2ffc;
-  --button-background: #4c2ffc1a;
-  --button-shadow: #4c2ffc2e;
+  --primary-background: #4c2ffc1a;
+  --primary-shadow: #4c2ffc2e;
+  --radius: 10px;
+  --link: #4c2ffc8a;
+  --danger-color: #e51a3e;
+  --danger-background: #e51a3e1a;
 }
 
 /* Do not move the imports from here. 
@@ -24,7 +28,7 @@ Override Bootstrap variables only above.
 @import './../../../node_modules/bootstrap/scss/bootstrap.scss';
 
 // Progress bar
-// @import './../../../node_modules/react-circular-progressbar/dist/styles.css';
+@import './../../../node_modules/react-circular-progressbar/dist/styles.css';
 
 /* Base
 -------------------------------------------------- */
