feat(actionQueue): add required fields on queue action summary

--- a/src/components/Trim/trim.scss
+++ b/src/components/Trim/trim.scss
@@ -112,3 +112,7 @@ a > .trim span,
     max-width: 13rem;
   }
 }
+
+.css-t0ut69-MuiPaper-root-MuiAccordion-root::before {
+  display: none !important;
+}
