--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -9,6 +9,17 @@ $primary: #4c2ffc;
 $light: #fafafa;
 $a: #1392ff;
 
+// Theme variables
+:root {
+  --primary-color: #4c2ffc;
+  --primary-background: #4c2ffc1a;
+  --primary-shadow: #4c2ffc2e;
+  --radius: 10px;
+  --link: #4c2ffc8a;
+  --danger-color: #e51a3e;
+  --danger-background: #e51a3e1a;
+}
+
 /* Do not move the imports from here. 
 Override Bootstrap variables only above.
 -------------------------------------------------- */
