--- a/src/assets/sass/theme.css
+++ b/src/assets/sass/theme.css
@@ -11337,7 +11337,7 @@ a,
 
 .btn {
   -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04) !important;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04) !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04) !important;
 }
 
 .connect-btns .btn {
