--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -103,7 +103,7 @@ a,
   color: #9dabbd;
 }
 .t-shadow {
-  text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 4px 7px rgba(0, 0, 0, 0.3);
 }
 .btn {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04) !important;
