--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -106,7 +106,7 @@ a,
   text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.3);
 }
 .btn {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04) !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04) !important;
 }
 .connect-btns {
   .btn {
