Feature/nft send functionality (#30)
* style(styledComponents): added styled components instead of scss style

* style(mobileLayout): styled components on mobile layout

* feat(mobileLayout): added theme breakpoints

* style(mobileLayout): added styled component for secondary menu

* style(mobileLayout): added divider on mobile layout

* style(mobileLayout): added new style on mobile layout

* style(topHeader): added new style on top header

* style(MobileHeader): hide balance on scroll

* feat(Nft): created nft modal & redux store

* feat(nft): modal & redux store

* feat(nft): nft component modal form

* feat(nft): execute transfer modal

* feat(nft): propose transaction

* feat(nft): propose

* feat(walletAddress): refactoring shorthand address function

* style(styledComponents): added styled components instead of scss style

* style(mobileLayout): styled components on mobile layout

* style(styledComponents): added styled components instead of scss style

* feat(mobileLayout): added theme breakpoints

* style(mobileLayout): added new style on mobile layout

* style(topHeader): added new style on top header

* style(MobileHeader): hide balance on scroll

* style(nftComponent): added styled component and scss variables

* chore: fixed translationr return type

* chore: formatted with prettier

* chore: wip ignore react imports

Signed-off-by: Nick Ciolpan <nick@graffino.com>

* fix(eslint): fixed issues art 4

* chore: fix imports, linters

* feat(transactionHistory): start transaction history grouping

* chore: fix

* style(nftPage): add cotnainer padding

* feat(Nft): created nft modal & redux store

* fix: minor fixes

* chore: fix

* chore: fix conflict

* chore: fix conflicts

* chore: fix conflict

* chore: fix conflicts

* fix: send all params for the async smart contract nft transfer call

* feat(sendNFT): implement ESDTNFT Transfer call function

* chore: fix some types



--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -9,6 +9,18 @@ $primary: #4c2ffc;
 $light: #fafafa;
 $a: #1392ff;
 
+// Theme variables
+:root {
+  --primary-color: #4c2ffc;
+  --primary-background: #4c2ffc1a;
+  --primary-shadow: #4c2ffc2e;
+  --radius: 10px;
+  --link: #4c2ffc8a;
+  --danger-color: #e51a3e;
+  --danger-background: #e51a3e1a;
+  --secondary-shadow: #4c2ffc08;
+}
+
 /* Do not move the imports from here. 
 Override Bootstrap variables only above.
 -------------------------------------------------- */
@@ -94,7 +106,7 @@ a,
   text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.3);
 }
 .btn {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04) !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04) !important;
 }
 .connect-btns {
   .btn {
