--- a/src/assets/sass/theme.css
+++ b/src/assets/sass/theme.css
@@ -11332,12 +11332,12 @@ a,
 }
 
 .t-shadow {
-  text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 4px 7px rgba(0, 0, 0, 0.3);
 }
 
 .btn {
   -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04) !important;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04) !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04) !important;
 }
 
 .connect-btns .btn {
