fix: design - navbar menu & account button

--- a/src/components/Layout/Navbar/menu.scss
+++ b/src/components/Layout/Navbar/menu.scss
@@ -9,7 +9,8 @@
   color: #4c2ffc !important;
 }
 .active span {
-  font-weight: 600;
+  font-weight: 500;
+  color: #4c2ffc !important;
 }
 .accordion-details-link .link-hover {
   padding-left: 43px;
