Feature/navbar styling alex (#29)
* styled navbarAccountDetails

* chore: update .gitignore

* styled navbarAccountDetails and totalBalance

* styled navbarAccountDetails and totalBalance - 2

* styled totalBalance

* updated package-lock - elron & fixed safe-style margin

* added space between ammount & currency

* styled NavbarAccountDetails & TotalBalance - 3 & deleted css file

* updated safe-stye.jsx - margin-left

* fixed bugs - 'address not found' in oragization folder - ordered imports in app.tsx

* changed top/bottommenu icons & margin right to 1

* updated style of account button - padding + active

* updated style of UnlockTitle - on hover

* updated Unlock's style & hover methods

* added new icons - account file & styling on hover

* remove padding top & bottom  Logo

* styled Account container - done

* chore: fix

* add missing linters

* chore: fixed translationr return type

* feature: herotag, avatar and addressbook

Signed-off-by: Nick Ciolpan <nick@graffino.com>

* chore: resolved react-overlay

Signed-off-by: Nick Ciolpan <nick@graffino.com>

* chore: formatted with prettier

* chore: formatted with prettier

* chore: formatted with prettier

* wip: linting

Signed-off-by: Nick Ciolpan <nick@graffino.com>

* chore: wip ignore react imports

Signed-off-by: Nick Ciolpan <nick@graffino.com>

* fix(eslint): fixed eslint issues part 1

* fix(eslint) fixed issues part 2

* fix(eslint): fixed issues art 4

* chore: various fixes

* fix(eslint): fixed react is unused warning

* fix(eslint): remove never used elements

* wip: eslint run

* wip: global variables, fragments

* chore: progress on lint fixes

* chore: finished linting

* chore: major fixes

* chore: fix imports, linters

* fix(assetsCoins): implement maiar exchange UX and fix features

* feat(transactionHistory): start transaction history grouping

* chore: lint and format

* feat(transactionQueue): a

--- a/src/assets/sass/pages/unlock.scss
+++ b/src/assets/sass/pages/unlock.scss
@@ -6,25 +6,29 @@
   }
 }
 
-.unlock-page {
-  width: 100%;
-  max-width: toRem(366);
+.unlock-block {
+  text-align: center;
+  hr {
+    margin: 0 0 0.4rem 0;
+  }
+  span {
+    font-weight: 700;
+  }
   .unlock {
     width: 100%;
-    border: 1px solid #e6e8ec;
-    box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.06);
-    border-radius: 12px;
-    padding: 40px 24px;
+    max-width: toRem(366);
+    padding: 13px 20px;
     > a {
       color: #000 !important;
     }
 
     .btn-unlock {
       color: $body-color;
-      padding: 1.2rem;
+      padding: 1.2rem 21px;
       margin: 0 !important;
       margin-bottom: 0.7rem !important;
       font-size: 1rem;
+      font-weight: 600;
       border: 1px solid #e6e8ec !important;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
       border-radius: 8px;
@@ -32,8 +36,17 @@
       background: transparent;
 
       &:hover {
-        background: none;
-        border-color: #1392ff !important;
+        background-color: #4c2ffc !important;
+        color: #ffff !important;
+        path:nth-child(1) {
+          fill: #ffff;
+        }
+        path:nth-child(2) {
+          fill: #1f43f7 !important;
+        }
+        path:nth-child(3) {
+          fill: #1f43f7 !important;
+        }
         .arrow {
           color: #1392ff;
           opacity: 1;
@@ -49,8 +62,8 @@
         opacity: 0;
       }
     }
-  }
-  .text {
-    color: #3d5170;
+    .text {
+      color: #3d5170;
+    }
   }
 }
