--- a/src/components/Layout/Navbar/menu.scss
+++ b/src/components/Layout/Navbar/menu.scss
@@ -9,7 +9,7 @@
   color: #4c2ffc !important;
 }
 .active span {
-  font-weight: 500;
+  font-weight: 400;
   color: #4c2ffc !important;
 }
 .accordion-details-link .link-hover {
@@ -24,7 +24,7 @@
   .active {
     border-right: 2px solid #4c2ffc;
     display: block;
-    background: #e4eaff;
+    background: red;
     color: #4c2ffc !important;
   }
 }
