restyle: changed colors of icons & breadcrumbs

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -49,7 +49,7 @@ div {
 }
 a,
 .link-style {
-  color: #1392ff !important;
+  color: #1392ff;
 }
 .link-second-style {
   color: #9dabbd !important;
