feat: navbar and other features on dark mode

--- a/src/components/Layout/Navbar/menu.scss
+++ b/src/components/Layout/Navbar/menu.scss
@@ -8,6 +8,10 @@
 .active svg {
   color: #4c2ffc !important;
 }
+.active p {
+  font-weight: 400;
+  color: #4c2ffc !important;
+}
 .active span {
   font-weight: 400;
   color: #4c2ffc !important;
