--- a/src/assets/sass/pages/unlock.scss
+++ b/src/assets/sass/pages/unlock.scss
@@ -29,7 +29,7 @@
       margin-bottom: 0.7rem !important;
       font-size: 1rem;
       font-weight: 600;
-      border: 1px solid #e6e8ec !important;
+      border: 1px solid #c2c2c2 !important;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
       border-radius: 8px;
       transition: 0.1s;
