--- a/src/components/Layout/Navbar/menu.scss
+++ b/src/components/Layout/Navbar/menu.scss
@@ -8,8 +8,12 @@
 .active svg {
   color: #4c2ffc !important;
 }
+.active p {
+  font-weight: 400;
+  color: #4c2ffc !important;
+}
 .active span {
-  font-weight: 500;
+  font-weight: 400;
   color: #4c2ffc !important;
 }
 .accordion-details-link .link-hover {
@@ -24,7 +28,7 @@
   .active {
     border-right: 2px solid #4c2ffc;
     display: block;
-    background: #e4eaff;
+    background: red;
     color: #4c2ffc !important;
   }
 }
