--- a/src/components/Layout/Navbar/menu.scss
+++ b/src/components/Layout/Navbar/menu.scss
@@ -10,7 +10,7 @@
 }
 .active p {
   font-weight: 400;
-  color: #4c2ffc !important;
+  color: currentColor;
 }
 .active span {
   font-weight: 400;
@@ -28,14 +28,14 @@
   .active {
     border-right: 2px solid #4c2ffc;
     display: block;
-    color: #4c2ffc !important;
+    color: currentColor;
   }
 }
 @media (max-width: 600px) {
   .active {
     border-top: 2px solid #4c2ffc;
     display: block;
-    color: #4c2ffc !important;
+    color: currentColor;
   }
 }
 
