fix: z-index and unnecessary imports

--- a/src/assets/sass/components/modalContainer.scss
+++ b/src/assets/sass/components/modalContainer.scss
@@ -101,3 +101,21 @@
     }
   }
 }
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1300 !important;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+
+.modal-backdrop.fade {
+  opacity: 0;
+}
+
+.modal-backdrop.show {
+  opacity: 0.5;
+}
