feat(newMobileFlowAndTransactions): add new mobile flow + transactions history new implementation started

--- a/src/assets/sass/components/navbar.scss
+++ b/src/assets/sass/components/navbar.scss
@@ -174,3 +174,13 @@
     width: 113px;
   }
 }
+
+.headerVisible{
+  visibility: visible;
+  transition: all 0.3s;
+}
+.headerHidden {
+  visibility: hidden;
+  transition: all 0.3s;
+  transform: translateY(-100%);
+}
