feat(darkMode): add toggle buttons top right

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -276,6 +276,19 @@ a,
   }
 }
 
+.deploy-safe-ul {
+  padding: 0 !important;
+  padding-left: 15px !important;
+  margin-top: 24px !important;
+}
+
+.deploy-safe-ul__dark {
+  padding: 0 !important;
+  padding-left: 15px !important;
+  margin-top: 24px !important;
+  color: #fff;
+}
+
 /* Footer
 -------------------------------------------------- */
 footer {
